--- a/Tracker/Tracker.csproj
+++ b/Tracker/Tracker.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Serializer.cs" />
     <Compile Include="Tracker.cs" />
     <Compile Include="TrackerEvent.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
