Server save, basic functionality

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -52,5 +52,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tracker\Tracker.csproj">
+      <Project>{87f9ac70-5207-42e6-933e-9ba9d9fb0686}</Project>
+      <Name>Tracker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
